# mudra-ml

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
production_tests/: README.md  conftest.py  test_boosters.py  test_real_datasets.py  test_scale.py
src/mudra_ml/: __init__.py  cli.py  constants.py  core.py  decisions.py  errors.py  evaluate.py  goal.py  ingest.py  plots.py  preprocess.py  profile.py  quality.py  recommend.py  report.py  schema.py
src/mudraml/: cli.py  constants.py  core.py  decisions.py  goal.py  ingest.py  recommend.py  report.py
tests/: battery_datasets.py  conftest.py  test_artifact_and_predict.py  test_battery.py  test_booster_labels.py  test_cli.py  test_core_and_report.py  test_cv_selection.py  test_determinism.py  test_dirty_data.py  test_discrete_columns.py  test_evaluate.py  test_evaluate_v2.py  test_goal.py  test_ingest.py  test_new_models.py  test_plots.py  test_preprocess.py  test_profile.py  test_quality.py  test_recommend.py  test_report_order.py  test_report_v2.py  test_stress.py
