[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mudra-ml"
version = "0.3.0"
description = "Glass-box autonomous data science: profile, clean, model, and explain every decision."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Mudit Nautiyal" }]
keywords = [
    "automl",
    "machine-learning",
    "data-science",
    "scikit-learn",
    "explainable",
    "pipeline",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scikit-learn>=1.2",
    "joblib>=1.2",
    "jinja2>=3.1",
    "typer>=0.9",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
parquet = ["pyarrow>=12.0"]
excel = ["openpyxl>=3.1"]
boost = ["xgboost>=1.7", "lightgbm>=4.0"]
files = ["pyarrow>=12.0", "openpyxl>=3.1"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=5.0",
    "pyarrow>=12.0",
    "openpyxl>=3.1",
]

[project.urls]
Homepage = "https://github.com/MuditNautiyal-21/MudraML"
Repository = "https://github.com/MuditNautiyal-21/MudraML"
Issues = "https://github.com/MuditNautiyal-21/MudraML/issues"
Changelog = "https://github.com/MuditNautiyal-21/MudraML/blob/main/CHANGELOG.md"

[project.scripts]
mudra-ml = "mudra_ml.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mudra_ml"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mudra_ml",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# The report module holds long inline HTML and markdown templates.
"src/mudra_ml/report.py" = ["E501"]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["mudra_ml"]
branch = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
